apps/gomoku/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gomoku
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    app: gomoku
  ports:
    - name: http
      port: 80
      targetPort: http
